<resources>
    <string name="app_name">Funcart</string>

    <!-- login -->
    <string name="emailOrPhoneNumber">Email or Phonenumber</string>
    <string name="Password">Password</string>
    <string name="new_to_funcart">New To Funcart</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login">Login</string>

    <!-- signup -->
    <string name="create_account">Create Account</string>
    <string name="Name">Enter Full Name</string>
    <string name="PhoneNumber">Phonenumber</string>
    <string name="Email_address">Email Address</string>
    <string name="signup">Singup</string>

    <!-- Cart -->
    <string name="Cart">My Cart</string>

    <!-- items list -->
    <string name="itemList">Items</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="funcart_home">funcart_home</string>

    <!-- customlist -->
    <string name="add_to_cart">Add to Cart</string>

    <!-- cart -->
    <string name="your_cart">Your Cart</string>
    <string name="checkout_button">Checkout</string>
    <string name="remove_item">Remove Item</string>

    <!-- payment-->
    <string name="payment">Choose Payment</string>

    <!-- order-->
    <string name="order">Your Order</string>
    <string name="createOrder">Create Order</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
