<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#90caf9"
    tools:context="com.example.funcart.Signup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="30dp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Name"
        android:textSize="15dp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:inputType="text"
        android:maxEms="20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/PhoneNumber"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="130dp"
        android:inputType="phone"
        android:maxEms="10" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/Email_address"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="190dp"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:text="@string/Password"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="250dp"
        android:inputType="textPassword"
        android:maxEms="6" />

    <Button
        android:id="@+id/signup"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="320dp"
        android:text="@string/signup"
        android:textStyle="bold" />

</RelativeLayout>
</ScrollView>