<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#cfd8dc"
    tools:context="com.example.funcart.Login">



    <TextView
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:text="@string/login"
         android:textSize="30dp"
         android:textStyle="bold" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textUser"
         android:text="@string/emailOrPhoneNumber"
         android:textStyle="bold"
         android:textSize="15dp"
         android:layout_marginTop="50dp"/>

  <EditText
      android:layout_width="fill_parent"
      android:layout_height="40dp"
      android:layout_marginTop="65dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:id="@+id/username"
      android:inputType="text" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="105dp"
      android:id="@+id/txtPass"
      android:text="@string/Password"
      android:textSize="15dp"
      android:textStyle="bold"/>

  <EditText
      android:layout_width="fill_parent"
      android:layout_height="40dp"
      android:layout_marginTop="120dp"
      android:id="@+id/password"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:inputType="textPassword"/>

  <Button
      android:layout_width="fill_parent"
      android:layout_height="40dp"
      android:text="@string/login"
      android:onClick="onClick"
      android:layout_marginTop="160dp"
      android:textColor="@color/colorPrimary"
      android:id="@+id/Login"
      android:textStyle="bold"/>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/new_to_funcart"
       android:layout_marginTop="230dp"
       android:layout_centerHorizontal="true"
       android:textStyle="italic"
       android:textSize="10dp"/>

     <Button
         android:layout_width="fill_parent"
         android:layout_height="45dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="250dp"
         android:text="@string/create_new_account"
         android:id="@+id/createAccount" />


</RelativeLayout>
